// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`telepath: wagtail.blocks.StaticBlock HTML escaping boundblock matches the snapshot 1`] = `
StaticBlock {
  "blockDef": StaticBlockDefinition {
    "meta": Object {
      "icon": "icon",
      "label": "The label",
      "text": "The admin text <script>somethingBad();</script>",
    },
    "name": "test_field",
  },
}
`;

exports[`telepath: wagtail.blocks.StaticBlock HTML escaping it renders correctly 1`] = `"<div>The admin text &lt;script&gt;somethingBad();&lt;/script&gt;</div>"`;

exports[`telepath: wagtail.blocks.StaticBlock allows safe HTML boundblock matches the snapshot 1`] = `
StaticBlock {
  "blockDef": StaticBlockDefinition {
    "meta": Object {
      "html": "The admin text <script>somethingBad();</script>",
      "icon": "icon",
      "label": "The label",
    },
    "name": "test_field",
  },
}
`;

exports[`telepath: wagtail.blocks.StaticBlock allows safe HTML it renders correctly 1`] = `"<div>The admin text <script>somethingBad();</script></div>"`;

exports[`telepath: wagtail.blocks.StaticBlock boundblock matches the snapshot 1`] = `
StaticBlock {
  "blockDef": StaticBlockDefinition {
    "meta": Object {
      "icon": "icon",
      "label": "The label",
      "text": "The admin text",
    },
    "name": "test_field",
  },
}
`;

exports[`telepath: wagtail.blocks.StaticBlock it renders correctly 1`] = `"<div>The admin text</div>"`;
